<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivMangaCover" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.38" />

        <ImageView
            android:id="@+id/ivBackdrop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.2"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/material_grey_700" />

        <ImageView
            android:id="@+id/ivMangaCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/description_cover"
            app:layout_constraintDimensionRatio="h,2:3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/material_grey_700" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFavorite"
            style="@style/Theme.Widget.FAB"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:srcCompat="@drawable/ic_add_to_library_24dp" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvInfo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvMangaFullTitle"
                    style="@style/TextAppearance.Medium.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/manga_info_full_title_label"
                    android:textIsSelectable="false"
                    app:autoSizeMaxTextSize="20sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvMangaAuthorLabel"
                    style="@style/TextAppearance.Medium.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manga_info_author_label"
                    android:textIsSelectable="false"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMangaFullTitle" />

                <TextView
                    android:id="@+id/tvMangaAuthor"
                    style="@style/TextAppearance.Regular.Body1.Secondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textIsSelectable="false"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMangaAuthorLabel"
                    app:layout_constraintLeft_toRightOf="@+id/tvMangaAuthorLabel"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/tvMangaArtistLabel"
                    style="@style/TextAppearance.Medium.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manga_info_artist_label"
                    android:textIsSelectable="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMangaAuthorLabel" />

                <TextView
                    android:id="@+id/tvMangaArtist"
                    style="@style/TextAppearance.Regular.Body1.Secondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textIsSelectable="false"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMangaArtistLabel"
                    app:layout_constraintLeft_toRightOf="@+id/tvMangaArtistLabel"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/tvMangaChaptersLabel"
                    style="@style/TextAppearance.Medium.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manga_info_last_chapter_label"
                    android:textIsSelectable="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMangaArtistLabel" />

                <TextView
                    android:id="@+id/tvMangaChapters"
                    style="@style/TextAppearance.Regular.Body1.Secondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textIsSelectable="false"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMangaChaptersLabel"
                    app:layout_constraintLeft_toRightOf="@+id/tvMangaChaptersLabel"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/tvMangaLastUpdateLabel"
                    style="@style/TextAppearance.Medium.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manga_info_latest_data_label"
                    android:textIsSelectable="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMangaChaptersLabel" />

                <TextView
                    android:id="@+id/tvMangaLastUpdate"
                    style="@style/TextAppearance.Regular.Body1.Secondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textIsSelectable="false"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMangaLastUpdateLabel"
                    app:layout_constraintLeft_toRightOf="@+id/tvMangaLastUpdateLabel"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/tvMangaStatusLabel"
                    style="@style/TextAppearance.Medium.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manga_info_status_label"
                    android:textIsSelectable="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMangaLastUpdateLabel" />

                <TextView
                    android:id="@+id/tvMangaStatus"
                    style="@style/TextAppearance.Regular.Body1.Secondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textIsSelectable="false"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMangaStatusLabel"
                    app:layout_constraintLeft_toRightOf="@+id/tvMangaStatusLabel"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/tvMangaSourceLabel"
                    style="@style/TextAppearance.Medium.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manga_info_source_label"
                    android:textIsSelectable="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMangaStatusLabel" />

                <TextView
                    android:id="@+id/tvMangaSource"
                    style="@style/TextAppearance.Regular.Body1.Secondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textIsSelectable="false"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMangaSourceLabel"
                    app:layout_constraintLeft_toRightOf="@+id/tvMangaSourceLabel"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/tvMangaSummaryLabel"
            style="@style/TextAppearance.Medium.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textIsSelectable="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/tagGroupMangaGenres"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMangaSummaryLabel"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:id="@+id/tvMangaSummary"
                style="@style/TextAppearance.Regular.Body1.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textIsSelectable="false" />

        </androidx.core.widget.NestedScrollView>

        <me.gujun.android.taggroup.TagGroup
            android:id="@+id/tagGroupMangaGenres"
            style="@style/TagGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:atg_backgroundColor="@android:color/transparent"
            app:atg_borderColor="@color/md_blue_A400"
            app:atg_borderStrokeWidth="1dp"
            app:atg_textColor="@color/md_blue_A400"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nsvDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
